25 March 2004 Radu Ursu
- changed doc to work with the current manual tools implementation

25 February 2004 MY
- sMade find_alpha_solid faster even faster

25 February 2004 af
- Replaced the set/map in the traversal and the I/O with a Unique_hash_map
- Made find_alpha_solid faster 

25 fevrier 2004 MY
- added a testsuite
- changed traverse() with Andreas fix 

Version 3.34 (12 February 2004) MY
- changed Alpha_shape_cells_iterator into a Filter_iterator
- merged fixes in classify made for  bugfixrelease

Version 3.33 (09 February 2004) [rursu]
- Updated the headers of the examples files

Version 3.32 (25 January 2004) [af]
- Removed Alpha_shape_euclidean_traits_3 from doc, examples, demo and testsuite

Version 3.31 (14 janvier 04) [my]
- fixed makefile and wrapper of the doc
- add missing doc for the classify member function for edges

Version 3.30 (4 October 2003)[af]
- Removed a typo (after cleanup, grrr!##) in demos

Version 3.29 (3 October 2003)[af]
- cleanup in demos

Version 3.28 (1 October 2003)[af]
- Made Alpha_shape_euclidean_traits obsolete

Version 3.27 (30 September 2003) [af]
- Moved \chapter from alpha3.tex to main.tex


Version 3.26 (22/09/03)
- new headers

Version 3.24 (20/07/03) [af]
- Simplified traits classes

Version 3.24 (20/07/03) [af]
- Made predicates independent from CGAL::Cartesian
- Switched from Cartesian to Filtered_kernel<Simple_cartesian<double> >

Version 3.23 (18/07/03) [af]
- Introduced caching for the vertex and facet list

Version 3.22 (9/06/03)
- Replaced const int& with int in parameter list of Alpha_shape_3::classify(..)

Version 3.21
- Replaced CGAL_TYPENAME_MSVC_NULL with typename

version 3.20 (3/06/03)
- New design fixes.

version 3.19 (25/05/03)
- Upgrade to Triangulation_3's new design.
- Remove calls to undocumented .handle().

version 3.17 (22/08/02) MY
- fixed a bug in function classify(Point p, ..) of Alpha_shapes_3.h

version 3.15 (af)
- Made demo/demo_alpha.C compile under Windows